<resources>
    <string name="app_name">SceneView</string>
    <string name="sceneview_usage">Remote ICU ECGI </string>
    <string name="remote_model">Remote model</string>
    <string name="local_model">Local model</string>
    <string name="button1">testcolorchange</string>
    <string name="textview1">testnumber</string>
    <string name="stBtn">start</string>
    <string name="stpBtn">stop</string>
    <string name="textviewecg">ICU3</string>
    <string name="textviewchat">ICU4</string>
    <string name="icuicon">icuicon</string>
    <string name="ecgisignal">ecgisig</string>
    <string name="chat">groupchat</string>
    <string name="textviewuser">ICU1</string>
    <string name="textviewlogout">ICU4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="patientname">patient name</string>
    <string name="searchList">Search</string>
    <string name="apilevel">Api level</string>
    <string name="patient_id">00000000</string>
    <string name="monitoring">monitoring</string>
    <string name="uilogin">ECGI Monitoring</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="logintxt">LOGIN</string>
    <string name="loginbtntop">Register here</string>
    <string name="uiregister">ECGI Monitoring</string>
    <string name="registerbtn">Register</string>
    <string name="registertxt">REGISTER</string>
    <string name="registerbtntop">LOGIN</string>
    <string name="userhead">user head photo</string>
    <string name="username">Yu Shu</string>
    <string name="userid">ID: 123</string>
    <string name="register_user">User name</string>
    <string name="extended_fab_label_vs">Vital Signs</string>
    <string name="extended_fab_label_camera">Monitor</string>
    <string name="extended_fab_label_logs">Writing logs</string>
    <string name="extended_fab_label_chat">Chat</string>
    <string name="extended_fab_label_menu">Menu</string>
    <string name="bottom_heart_rate_lbl">Heart Rate: 81 bpm</string>
    <string name="bottom_blood_pressure_lbl">Blood Pressure: 110/78 mmHg</string>
    <string name="bottom_oxygen_lbl">Oxygen Saturation: 98 %</string>
    <string name="bottom_respiration_lbl">Respiration: 17 bpm</string>
    <string name="bottom_temperature_lbl">Temperature: 36.8 C</string>
    <string name="bottom_heart_rate_txt">81 bpm</string>
    <string name="bottom_blood_pressure_txt">110/78</string>
    <string name="bottom_oxygen_txt">98 %</string>
    <string name="bottom_respiration_txt">17 bpm</string>
    <string name="bottom_temperature_txt">36.8 C</string>
</resources>
