<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/whiteColor"
    android:layout_width="match_parent"
    android:layout_height="355dp"
    app:layout_behavior="com.google.android.material.BottomSheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/vs_txt_bg"
            android:text="@string/bottom_heart_rate_lbl"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/vs_txt_bg2"
            android:text="@string/bottom_temperature_lbl"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/vs_txt_bg3"
            android:text="@string/bottom_oxygen_lbl"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/vs_txt_bg4"
            android:text="@string/bottom_respiration_lbl"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/vs_txt_bg5"
            android:text="@string/bottom_blood_pressure_lbl"
            android:textAlignment="center"
            android:textColor="@color/blackColor"
            android:textSize="26sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>