<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sceneViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.ar.sceneform.SceneView
        android:id="@+id/sceneView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/skuProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stBtn"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sceneView"
        app:layout_constraintStart_toStartOf="@+id/sceneView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sceneView"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/stBtn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sceneView"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/sceneView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/a_name"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/btn_circle_shape"
        android:backgroundTint="@color/respiration"
        android:gravity="center"
        android:text="T"
        android:textAlignment="center"
        android:textColor="@color/whiteColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/bloodPressure"
        android:text="@string/stpBtn"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/chat_button"
        android:layout_marginBottom="210dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:fabSize="mini"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:textColor="@color/buttonBlue"
        app:shapeAppearance="@drawable/fab_container_style"
        app:backgroundTint="@color/whiteColor"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/extended_fab_label_chat" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/camera_button"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:fabSize="mini"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:textColor="@color/buttonBlue"
        app:shapeAppearance="@drawable/fab_container_style"
        app:backgroundTint="@color/whiteColor"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/extended_fab_label_camera" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_button"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        android:textColor="@color/buttonBlue"
        app:shapeAppearance="@drawable/fab_container_style"
        app:backgroundTint="@color/whiteColor"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/extended_fab_label_logs"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/vs_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="272dp"
        android:contentDescription="@string/register_user"
        android:text="@string/extended_fab_label_vs"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/buttonBlue"
        app:backgroundTint="@color/whiteColor"
        app:shapeAppearance="@drawable/fab_container_style"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/sceneView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:fabSize="normal"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:iconSize="40dp"
        app:icon="@drawable/ic_menu"
        app:iconTint="@color/whiteColor"
        app:backgroundTint="@color/buttonBlue"/>


</androidx.constraintlayout.widget.ConstraintLayout>